feat: build docker images